--- a/libft_gnl_printf/Makefile
+++ b/libft_gnl_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: irene <irene@student.42.fr>                +#+  +:+       +#+         #
+#    By: iescalon <iescalon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/11 15:02:17 by iescalon          #+#    #+#              #
-#    Updated: 2024/04/22 11:27:41 by irene            ###   ########.fr        #
+#    Updated: 2024/06/04 15:21:05 by iescalon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,6 +18,7 @@ SRCS			= ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
 				ft_tolower.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
 				ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
 				ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c get_next_line.c \
+				ft_putchar_putstr.c ft_putnbr.c ft_printf.c ft_puthex.c ft_putptr.c \
 
 OBJS			= $(SRCS:.c=.o)
 
